k8s/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batch-deployment
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: batch
  template:
    metadata:
      labels:
        app: batch
    spec:
      containers:
        - name: spring-batch-container
          image: 192.168.0.212:5555/spring-batch:20240320-004029
          command: ["/bin/bash"]
          args: ["/usr/src/main/entrypoint.sh"]
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: batch-logs
              mountPath: /usr/src/main/logs
        - name: mysql-master-container
          image: 192.168.0.212:5555/mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: batch-mysql-master-data
              mountPath: /var/lib/mysql

        - name: phpmyadmin-container
          image: 192.168.0.212:5555/phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
        - name: fluent-bit
          image: 192.168.0.212:5555/fluent/fluent-bit
          volumeMounts:
            - name: batch-fluent-config
              mountPath: /fluent-bit/etc/fluent-bit.conf
              subPath: fluent-bit.conf
            - name: batch-logs
              mountPath: /usr/src/main/logs

      volumes:
        - name: batch-logs
          persistentVolumeClaim:
            claimName: batch-logs-pvc
        - name: batch-mysql-master-data
          persistentVolumeClaim:
            claimName: batch-mysql-master-data-pvc
        - name: batch-fluent-config
          configMap:
            name: batch-fluent-bit-config
